repair overflow in animation

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -2,6 +2,7 @@
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
+	overflow-x: unset;
 }
 
 body {
@@ -12,7 +13,6 @@ body {
 	margin: 0;
 	min-height: 100vh;
 	scroll-behavior: smooth;
-	overflow-x: hidden;
 }
 
 main {
