--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -3,6 +3,7 @@
 .about {
 	position: relative;
 	padding: 6em 2em;
+	overflow-x: hidden;
 	// margin-top: 2em;
 	// background-color: gold;
 
